--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "spike_alert_scrape",
-  "version": "1.0.0",
-  "description": "scrape functionality for spike_alert",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "puppeteer": "^1.19.0",
-    "puppeteer-extra": "^2.1.3",
-    "puppeteer-extra-plugin-stealth": "^2.2.2"
-  }
+    "name": "spike_alert_scrape",
+    "version": "1.0.0",
+    "description": "scrape functionality for spike_alert",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "scrape": "node ./scrape/scrape.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.3",
+        "moment": "^2.24.0",
+        "puppeteer": "^1.19.0",
+        "puppeteer-extra": "^2.1.3",
+        "puppeteer-extra-plugin-stealth": "^2.2.2"
+    }
 }
